; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_container.c_container_update_marks_textures.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_container.c_container_update_marks_textures.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32, i32, i32, i32 }
%struct.sway_container = type { i32, i32, i32, i32 }

@config = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @container_update_marks_textures(%struct.sway_container* %0) #0 {
  %2 = alloca %struct.sway_container*, align 8
  store %struct.sway_container* %0, %struct.sway_container** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** @config, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %39

8:                                                ; preds = %1
  %9 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %10 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %11 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %10, i32 0, i32 3
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @config, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 3
  %15 = call i32 @update_marks_texture(%struct.sway_container* %9, i32* %11, i32* %14)
  %16 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %17 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %18 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %17, i32 0, i32 2
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** @config, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 2
  %22 = call i32 @update_marks_texture(%struct.sway_container* %16, i32* %18, i32* %21)
  %23 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %24 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %25 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %24, i32 0, i32 1
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** @config, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = call i32 @update_marks_texture(%struct.sway_container* %23, i32* %25, i32* %28)
  %30 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %31 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %32 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %31, i32 0, i32 0
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** @config, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = call i32 @update_marks_texture(%struct.sway_container* %30, i32* %32, i32* %35)
  %37 = load %struct.sway_container*, %struct.sway_container** %2, align 8
  %38 = call i32 @container_damage_whole(%struct.sway_container* %37)
  br label %39

39:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @update_marks_texture(%struct.sway_container*, i32*, i32*) #1

declare dso_local i32 @container_damage_whole(%struct.sway_container*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
